--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,5 +33,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'org.osmdroid:osmdroid-android:6.1.5'
     implementation 'com.rabbitmq:amqp-client:4.11.3'
+    implementation 'com.jakewharton.threetenabp:threetenabp:1.2.2'
 
 }
