--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,6 @@ dependencies {
     implementation 'com.rabbitmq:amqp-client:4.11.3'
     implementation 'com.jakewharton.threetenabp:threetenabp:1.2.2'
     implementation 'org.ocpsoft.prettytime:prettytime:4.0.1.Final'
+    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
 }
