add HTTP Connection Helper

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
         </activity>
 
         <service
-            android:name=".service.SParkeeMessagingService"
+            android:name=".helper.AMQPChannelHelper"
             android:exported="false"/>
 
     </application>
