--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,10 @@
             android:name=".helper.AMQPChannelHelper"
             android:exported="false"/>
 
+        <service
+            android:name=".helper.HTTPConnectionHelper"
+            android:exported="false"/>
+
     </application>
 
 
